exports[`<AsyncButton /> renders <CircularProgress /> when makingRequest is true 1`] = `
<CircularProgress
  max={100}
  min={0}
  mode="indeterminate"
  size={40}
  thickness={3.5}
  value={0} />
`;

exports[`<AsyncButton /> renders <RaisedButton /> when makingRequest is false 1`] = `
<div>
  <RaisedButton
    disabled={false}
    fullWidth={false}
    label="login"
    labelPosition="after"
    primary={false}
    secondary={false} />
</div>
`;

exports[`<AsyncButton /> renders correctly 1`] = `
<div>
  <RaisedButton
    disabled={false}
    fullWidth={false}
    label="login"
    labelPosition="after"
    primary={false}
    secondary={false}
    type="text" />
</div>
`;
